--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,15 @@ body {
 }
 
 .login-text span {
-  font-size: 1.1rem;
+  margin-top: 0.5rem;
+  color: #a0a0a0;
+  font-size: clamp(0.9rem, 2vw, 1.1rem); /* адаптивний розмір */
+  font-weight: 400;
+  line-height: 1.6;
+  text-align: center;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .skip-btn,
@@ -61,4 +69,62 @@ body {
 .start-btn:hover {
   background: linear-gradient(135deg, #5ec6ff, #3399ff);
   transform: translateY(-2px) scale(1.03);
+}
+
+/* Avatar-Img */
+
+.flex-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2vh;
+}
+
+.avatar-login {
+  width: 10vh;
+  height: 10vh;
+  border-radius: 50%;
+}
+
+/* inputs */
+
+.login-input-fields {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.name-input-login,
+.surname-input-login {
+  width: 250px;
+  padding: 10px 14px;
+  margin: 6px 0;
+  border: 1px solid #444;
+  border-radius: 10px;
+  background-color: #1e1e1e;
+  color: #fff;
+  font-size: 14px;
+  outline: none;
+  transition: all 0.2s ease-in-out;
+}
+
+/* Ховер */
+.name-input-login:hover,
+.surname-input-login:hover {
+  border-color: hsl(0, 0%, 40%);
+}
+
+/* Фокус */
+.name-input-login:focus,
+.surname-input-login:focus {
+  border-color: #3b82f6; /* синій під кнопку Start */
+  box-shadow: 0 0 6px rgba(59, 130, 246, 0.6);
+}
+
+/* buttons */
+
+.start-buttons {
+  display: flex;
+  justify-content: center;
 }
