--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,12 @@ body {
   border-radius: 50%;
 }
 
+.avatar-change-logo {
+  width: 3vh;
+  height: 3vh;
+  margin-top: 6vh;
+}
+
 /* inputs */
 
 .login-input-fields {
