--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #121212; /* темно-сірий, майже чорний */
   color: #ffffff;
 }
 
@@ -17,6 +16,10 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #121212; /* темно-сірий, майже чорний */
+  color: #ffffff;
 }
 
 .login-text {
@@ -91,6 +94,12 @@ body {
   height: 3vh;
   margin-top: 6vh;
   cursor: pointer;
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+
+.avatar-change-logo:hover {
+  transform: scale(1.1) rotate(2deg);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
 }
 
 /* inputs */
@@ -134,4 +143,12 @@ body {
 .start-buttons {
   display: flex;
   justify-content: center;
+}
+
+/* Main Component */
+
+.body-section {
+  background-color: #121212; /* темний фон */
+  color: #ffffff; /* базовий текст білий */
+  font-family: "Inter", sans-serif;
 }
