--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,19 @@ body {
   margin-top: 2vh;
 }
 
+@media (max-width: 480px) {
+  .avatar-login {
+    width: 14vh;
+    height: 14vh;
+  }
+  
+  .avatar-change-logo {
+    width: 6vh;
+    height: 6vh;
+    margin-top: 6vh;
+  }
+}
+
 .avatar-login {
   width: 10vh;
   height: 10vh;
