--- a/src/index.css
+++ b/src/index.css
@@ -83,19 +83,6 @@ body {
   margin-top: 2vh;
 }
 
-@media (max-width: 480px) {
-  .avatar-login {
-    width: 14vh;
-    height: 14vh;
-  }
-  
-  .avatar-change-logo {
-    width: 6vh;
-    height: 6vh;
-    margin-top: 6vh;
-  }
-}
-
 .avatar-login {
   width: 10vh;
   height: 10vh;
@@ -164,4 +151,20 @@ body {
   background-color: #121212; /* темний фон */
   color: #ffffff; /* базовий текст білий */
   font-family: "Inter", sans-serif;
+}
+
+
+/* media parameters */
+
+@media (max-width: 480px) {
+  .avatar-login {
+    width: 34vh;
+    height: 34vh;
+  }
+  
+  .avatar-change-logo {
+    width: 15vh;
+    height: 15vh;
+    margin-top: 15vh;
+  }
 }
