--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   color: #ffffff;
+  background-color: #121212; /* темний фон */
 }
 
 .flexBox {
@@ -21,6 +22,30 @@ body {
   background-color: #121212; /* темно-сірий, майже чорний */
   color: #ffffff;
 }
+
+.login-section-activated {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #121212; /* темно-сірий, майже чорний */
+  color: #ffffff;
+  animation: hide 2s ease;
+}
+
+@keyframes hide {
+  0% {
+    opacity: 1;
+    transform: translateX(0) rotate(0deg);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-100vw) rotate(360deg);
+  }
+}
+
 
 .login-text {
   text-align: center;
@@ -99,7 +124,7 @@ body {
 
 .avatar-change-logo:hover {
   transform: scale(1.1) rotate(2deg);
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25); */
 }
 
 /* inputs */
