--- a/src/index.css
+++ b/src/index.css
@@ -197,8 +197,9 @@ body {
 /* HEADER */
 
 .logotype {
-  width: 20vh;
-  height: 20vh;
+  width: clamp(8vw, 12vw, 15vw);
+  height: auto;
+  
 }
 
 .flex-logo {
@@ -215,5 +216,7 @@ body {
 }
 
 .logo-text {
-  font-size: 20vh;
+  font-size: clamp(1rem, 4vw, 2.5rem);
+  font-weight: 600;
+  font-family: 'Quicksand', sans-serif;
 }
