creating progress-bar

--- a/src/index.css
+++ b/src/index.css
@@ -173,7 +173,7 @@ body {
 /* Main Component */
 
 .body-section {
-  background-color: #121212; /* темний фон */
+  /* background-color: #121212; темний фон */
   color: #ffffff; /* базовий текст білий */
   font-family: "Inter", sans-serif;
 }
@@ -257,3 +257,20 @@ body {
   justify-content: space-around;
   align-items: center;
 }
+
+/* progress-bar */
+
+.progress-bar-section {
+  /* background-color: #121212; */
+}
+
+.progress-bar { 
+  background-color: #1a1a1a; 
+  padding: 2%;
+  border-radius: 12px;
+  margin: 2% auto;
+  width: 60%;
+  height: auto;
+  min-height: 20vh;
+}
+
