--- a/src/index.css
+++ b/src/index.css
@@ -259,10 +259,17 @@ body {
   margin-top: 3vh;
 }
 
+.flex-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .greeting-div {
+  width: 60%;
   background-color: #1f1f1f;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -284,14 +291,10 @@ body {
 
 /* digital clock */
 
-.clock-container {
-  backdrop-filter: blur(5px);
-  width: 100vw;
-}
-
 .clock {
+  margin-top: 3vh;
   color: white;
-  font-size: 6rem;
+  font-size: 1.5rem;
   font-family: "Quicksand", sans-serif;
   font-weight: center;
   text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.75);
