--- a/src/index.css
+++ b/src/index.css
@@ -484,4 +484,29 @@ body {
   .tasks-div > button {
     margin-top: 3vh;
   }
+
+  .task-user-description {
+    width: 100%;
+    height: 30vh;
+  }
+
+  .user-description-of-task-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .input-uDesc {
+    width: 60%;
+  }
+
+  .input-uDesc::placeholder {
+    font-size: 1rem;
+  }
+
+  .create-task-button {
+    width: 30vw;
+    font-size: 0.8rem;
+  }
 }
