--- a/src/index.css
+++ b/src/index.css
@@ -300,7 +300,7 @@ body {
   /* background-color: #121212; */
 }
 
-.progress-bar {
+.progressBar {
   background-color: #1a1a1a;
   padding: 2%;
   border-radius: 12px;
@@ -308,6 +308,30 @@ body {
   width: 75%;
   height: auto;
   min-height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 3vh;
+  border-radius: 10px;
+  background-color: #e6e6e6;
+  margin-bottom: 1vh;
+}
+
+.progress-bar-fill {
+  height: 100%;
+  border-radius: 10px;
+  background-color: #2ecc71;
+  transition: width 0.5s ease-in-out;
+}
+
+.progress-label {
+  margin-top: 1vh;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 /* digital clock */
@@ -657,13 +681,26 @@ body {
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
 }
 
-/* progress-bar */
+/* progress-bar
 
 .progress-bar-box {
   background-color: #becdde;
-  width: ;
-  height: 80vh;
+  width: 80%;
+  height: 15vh;
 }
+
+.progress-bar-outside {
+  position: relative;
+  width: 70%;
+  height: 2vh;
+  border-radius: 50px;
+  border: 1px solid hsl(0, 0%, 30%);
+  background-color: hsl(0, 0%, 50%);
+}
+
+.progress-bar-inside {
+  width: 40p;
+} */
 
 @media (max-width: 600px) {
   .task-buttons {
