--- a/src/index.css
+++ b/src/index.css
@@ -305,8 +305,9 @@ body {
   padding: 2rem 1rem;
   border-radius: 14px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
-  width: 80%;
-  max-width: 600px;
+  width: 60%;
+  height: 10vh;
+  /* max-width: 600px; */
   margin: 2rem auto;
 }
 
