--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@ body {
   margin: 0;
   font-family: "Quicksand", sans-serif;
   color: #ffffff;
-  background-color: #121212; /* темний фон */
+  background-color: #121212;
 }
 
 .flexBox {
-  background-color: #1f1f1f; /* трохи світліший темний фон для контрасту */
+  background-color: #1f1f1f;
   border-radius: 12px;
   padding: 24px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
@@ -19,7 +19,7 @@ body {
   min-height: 100vh;
   margin: 0;
   font-family: "Quicksand", sans-serif;
-  background-color: #121212; /* темно-сірий, майже чорний */
+  background-color: #121212;
   color: #ffffff;
 }
 
@@ -30,7 +30,7 @@ body {
   min-height: 100vh;
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #121212; /* темно-сірий, майже чорний */
+  background-color: #121212;
   color: #ffffff;
   animation: hide 2s ease;
 }
@@ -53,7 +53,7 @@ body {
 .login-text span {
   margin-top: 0.5rem;
   color: #a0a0a0;
-  font-size: clamp(0.9rem, 2vw, 1.1rem); /* адаптивний розмір */
+  font-size: clamp(0.9rem, 2vw, 1.1rem);
   font-weight: 400;
   line-height: 1.6;
   text-align: center;
@@ -74,7 +74,6 @@ body {
   transition: all 0.25s ease;
 }
 
-/* Стиль для Skip */
 .skip-btn {
   background-color: #333;
   color: #ddd;
@@ -86,7 +85,6 @@ body {
   transform: translateY(-2px);
 }
 
-/* Стиль для Start */
 .start-btn {
   background: linear-gradient(135deg, #4cafef, #0077ff);
   color: white;
@@ -123,7 +121,6 @@ body {
 
 .avatar-change-logo:hover {
   transform: scale(1.1) rotate(2deg);
-  /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25); */
 }
 
 /* inputs */
@@ -149,16 +146,14 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
-/* Ховер */
 .name-input-login:hover,
 .surname-input-login:hover {
   border-color: hsl(0, 0%, 40%);
 }
 
-/* Фокус */
 .name-input-login:focus,
 .surname-input-login:focus {
-  border-color: #3b82f6; /* синій під кнопку Start */
+  border-color: #3b82f6;
   box-shadow: 0 0 6px rgba(59, 130, 246, 0.6);
 }
 
@@ -172,25 +167,11 @@ body {
 /* Main Component */
 
 .body-section {
-  /* background-color: #121212; темний фон */
-  color: #ffffff; /* базовий текст білий */
+  color: #ffffff;
   font-family: "Inter", sans-serif;
 }
 
 /* media parameters */
-
-@media (max-width: 480px) {
-  .avatar-login {
-    width: 30vw;
-    height: 30vw;
-  }
-
-  .avatar-change-logo {
-    width: 12vw;
-    height: 12vw;
-    margin-top: 8vh;
-  }
-}
 
 /* HEADER */
 
@@ -203,7 +184,6 @@ body {
   width: clamp(8vw, 12vw, 14vw);
   height: auto;
   border-radius: 50%;
-  /* border: 3px solid white; */
 }
 
 .flex-header-images-rightSide {
@@ -330,7 +310,6 @@ body {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
   width: 60%;
   height: 10vh;
-  /* max-width: 600px; */
   margin: 2rem auto;
 }
 
@@ -350,23 +329,19 @@ body {
 .progress-bar-section-focusModeActivated {
   display: flex;
   flex-direction: column;
-  /* align-items: center;
-  justify-content: center; */
   background: linear-gradient(135deg, #212121, #242424);
   padding: 2rem 1rem;
   border-radius: 14px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   width: 90%;
   height: 40vh;
-  /* max-width: 600px; */
   margin: 2rem auto;
   animation: drawFromLeft 0.7s ease-out forwards;
-  transform-origin: left; /* обов’язково для ефекту “розкриття” */
+  transform-origin: left;
 }
 
 .progressBar {
   width: 100%;
-  /* background-color: #2a2a2a; */
   border-radius: 12px;
   padding: 0.5rem;
   display: flex;
@@ -377,8 +352,6 @@ body {
 .focusMode-box {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
 }
 
 .focusMode-box-disabled {
@@ -480,7 +453,6 @@ body {
   margin: 3vh auto;
   background-color: #1f1f1f;
   border-radius: 12px;
-  /* padding: 16px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -493,7 +465,6 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #2a2a2a;
-  /* padding: 10px 14px; */
   border-radius: 8px;
   transition: all 0.2s ease;
   cursor: pointer;
@@ -501,7 +472,6 @@ body {
 
 .task-item:hover {
   background-color: #333333;
-  /* transform: translateY(-2px); */
 }
 
 .task-title {
@@ -546,26 +516,25 @@ body {
 }
 
 .input-uDesc {
-  /* width: 10vw; */
-  background-color: #2a2a2a; /* під колір діву */
-  border: 1px solid #444; /* легка рамка для відділення */
+  background-color: #2a2a2a;
+  border: 1px solid #444;
   border-radius: 8px;
   padding: 1vh 1.4vh;
-  color: #ffffff; /* білий текст */
+  color: #ffffff;
   font-size: 1.2rem;
   outline: none;
   transition: border 0.2s ease, box-shadow 0.2s ease;
-  width: 17vw; /* щоб тягнувся */
+  width: 17vw;
   box-sizing: border-box;
 }
 
 .input-uDesc::placeholder {
   opacity: 0.5;
-  color: #aaaaaa; /* сірий плейсхолдер */
+  color: #aaaaaa;
 }
 
 .input-uDesc:focus {
-  border: 1px solid #6c63ff; /* акцент при фокусі */
+  border: 1px solid #6c63ff;
   box-shadow: 0 0 6px rgba(108, 99, 255, 0.5);
 }
 
@@ -582,7 +551,7 @@ body {
   font-size: 16px;
   font-weight: 500;
   color: #ffffff;
-  background: #2a2a2a; /* темний фон під проект */
+  background: #2a2a2a;
   border: 1px solid #444;
   border-radius: 25px;
   cursor: pointer;
@@ -592,7 +561,7 @@ body {
 }
 
 .create-task-button:hover {
-  background: #3a3a3a; /* трохи світліший для hover */
+  background: #3a3a3a;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.6);
   transform: translateY(-2px);
 }
@@ -602,7 +571,6 @@ body {
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4);
 }
 
-/* Легкий внутрішній glow при hover */
 .create-task-button::after {
   content: "";
   position: absolute;
@@ -625,15 +593,8 @@ body {
 
 /* UserTask component */
 
-/* .flexTask {
-  display: flex;
-  justify-content: center;
-  align-self: center;
-} */
-
 .user-task {
   display: flex;
-  /* flex-direction: column; */
   justify-content: space-between;
   background: linear-gradient(145deg, #2e2e2e, #262626);
   color: #ffffff;
@@ -661,12 +622,9 @@ body {
   align-items: center;
 }
 
-/* Назва таски */
 .user-task .task-name {
   font-size: clamp(1rem, 2vw, 1.5rem);
   font-weight: 700;
-  /* margin-top: 0.5vh; */
-  /* margin-bottom: 0.5vh; */
   margin-right: 2vw;
   word-break: break-word;
   color: #ffffff;
@@ -677,23 +635,20 @@ body {
 .user-task .task-description {
   font-size: clamp(0.9rem, 1.5vw, 1.2rem);
   color: #bfbfbf;
-  /* margin-bottom: 1vh;÷ */
   word-break: break-word;
   line-height: 1.4;
-  max-width: 30vw; /* Максимальна ширина контейнера */
-  white-space: nowrap; /* Текст в один рядок */
-  overflow: hidden; /* Обрізати зайве */
-  text-overflow: ellipsis; /* Додати "..." в кінці, якщо текст не вміщується */
+  max-width: 30vw;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-/* Контейнер для кнопок */
 .user-task .task-buttons {
   display: flex;
   gap: 1vw;
   flex-wrap: wrap;
 }
 
-/* Кнопка Focus */
 .user-task button.focus {
   background: linear-gradient(135deg, #4caf50, #3e8e41);
   color: #fff;
@@ -708,12 +663,10 @@ body {
 
 .user-task button.focus:hover {
   background: linear-gradient(135deg, #5dd36e, #47a148);
-  transform: scale(1.05); /* Легка анімація збільшення */
+  transform: scale(1.05);
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.5);
-  /* box-shadow: 0 6px 16px rgba(0, 0, 0, 0.6); */
 }
 
-/* Кнопка Delete */
 .user-task button.delete {
   background: linear-gradient(135deg, #f44336, #c9302c);
   color: #fff;
@@ -728,35 +681,27 @@ body {
 
 .user-task button.delete:hover {
   background: linear-gradient(135deg, #ff5c5c, #d43f3f);
-  transform: scale(1.05); /* Легка анімація збільшення */
+  transform: scale(1.05);
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.5);
 }
 
 .finish-button {
-  padding: 1vh 2vw; /* Зручний розмір кнопки */
-  background: linear-gradient(
-    135deg,
-    #6a5acd,
-    #00bfff
-  ); /* Градієнт фіолетово-блакитний */
-  color: #fff; /* Білий текст */
-  font-weight: 600; /* Трохи жирніший шрифт */
+  padding: 1vh 2vw;
+  background: linear-gradient(135deg, #6a5acd, #00bfff);
+  color: #fff;
+  font-weight: 600;
   border: none;
-  border-radius: 12px; /* Округлі кути */
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4); /* Легка тінь */
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
   cursor: pointer;
-  transition: all 0.3s ease; /* Плавні ефекти при наведенні */
-  text-transform: uppercase; /* Великі літери */
+  transition: all 0.3s ease;
+  text-transform: uppercase;
 }
 
 .finish-button:hover {
-  transform: scale(1.05); /* Легка анімація збільшення */
+  transform: scale(1.05);
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.5);
-  background: linear-gradient(
-    135deg,
-    #7b68ee,
-    #1e90ff
-  ); /* Трохи світліший градієнт */
+  background: linear-gradient(135deg, #7b68ee, #1e90ff);
 }
 
 .finish-button:active {
@@ -764,26 +709,18 @@ body {
   box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3);
 }
 
-/* progress-bar
+@media (max-width: 480px) {
+  .avatar-login {
+    width: 30vw;
+    height: 30vw;
+  }
 
-.progress-bar-box {
-  background-color: #becdde;
-  width: 80%;
-  height: 15vh;
+  .avatar-change-logo {
+    width: 12vw;
+    height: 12vw;
+    margin-top: 8vh;
+  }
 }
-
-.progress-bar-outside {
-  position: relative;
-  width: 70%;
-  height: 2vh;
-  border-radius: 50px;
-  border: 1px solid hsl(0, 0%, 30%);
-  background-color: hsl(0, 0%, 50%);
-}
-
-.progress-bar-inside {
-  width: 40p;
-} */
 
 @media (max-width: 600px) {
   .task-buttons {
@@ -811,10 +748,10 @@ body {
 
   .user-task .task-description {
     margin-top: 2vh;
-    max-width: 50vw; /* Максимальна ширина контейнера */
-    white-space: nowrap; /* Текст в один рядок */
-    overflow: hidden; /* Обрізати зайве */
-    text-overflow: ellipsis; /* Додати "..." в кінці, якщо текст не вміщується */
+    max-width: 50vw;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .user-task {
