Changed focusMode logic

--- a/src/index.css
+++ b/src/index.css
@@ -297,6 +297,14 @@ body {
   margin-bottom: 5vh;
 }
 
+.btns-showing {
+  display: flex;
+}
+
+.btns-notShowing {
+  display: none;
+}
+
 /* Endpoint of Focus Mode */
 
 .progress-bar-section {
