--- a/src/index.css
+++ b/src/index.css
@@ -295,6 +295,26 @@ body {
   height: 100%;
 }
 
+.flex-focus-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-focus-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-flexes {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .timer {
   display: inline-block;
   font-family: "Ubuntu", sans-serif;
@@ -343,6 +363,7 @@ body {
   font-weight: 500;
   box-shadow: 0 0 25px rgba(120, 90, 250, 0.15);
   border: 1px solid rgba(255, 255, 255, 0.12);
+  margin-left: 4vw;
 }
 
 .focusMode-tips span {
