--- a/src/index.css
+++ b/src/index.css
@@ -329,6 +329,10 @@ body {
   transition: all 0.3s ease;
 }
 
+.finishTask-focusMode-section {
+  margin-top: 2vh;
+}
+
 .focusMode-task-name {
   font-size: 2.5rem;
   font-weight: bold;
