--- a/src/index.css
+++ b/src/index.css
@@ -1098,6 +1098,32 @@ body {
 }
 
 @media (max-width: 700px) {
+  .focusMode-tips {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background: rgba(255, 255, 255, 0.08);
+    backdrop-filter: blur(12px);
+    padding: 8px 10px;
+    border-radius: 18px;
+    /* max-width: 600px; */
+    margin: 0 auto;
+    color: #eaeaea;
+    font-size: 0.8rem;
+    line-height: 1.6;
+    font-weight: 300;
+    box-shadow: 0 0 25px rgba(120, 90, 250, 0.15);
+    border: 1px solid rgba(255, 255, 255, 0.12);
+    margin-left: 2vw;
+  }
+
+  .focusMode-pomodoro-btns button {
+    width: 2vw;
+    height: 2vh;
+    font-size: 0.8rem;
+    text-align: center;
+  }
+
   .focusMode-pomodoro-timer {
     height: 5vh;
     display: flex;
