--- a/src/index.css
+++ b/src/index.css
@@ -1144,11 +1144,6 @@ body {
 }
 
 @media (max-width: 1100px) {
-  /* .centerFlex {
-    display: flex;
-    justify-content: center;
-    align-items: center; */
-  /* }   */
   .flex-focus-1 {
     margin-top: 5vh;
     margin-left: 5vw;
@@ -1175,11 +1170,19 @@ body {
   .footerSection-focusMode {
     width: 50%;
   }
+
+  .footerSection-focusMode {
+    width: 80vw;
+    margin-right: 5vw;
+  }
+
   .focusMode-tips {
+    font-size: 0.8rem;
     margin-top: 10vh;
-    margin-left: 2vw;
-    /* width: ; */
-    height: 20vh;
+    /* margin-left: 2vw; */
+    width: 100%;
+    height: 40vh;
+    margin-bottom: 50vh;
   }
 
   .focusMode-pomodoro-btns button {
@@ -1205,7 +1208,7 @@ body {
     border-radius: 14px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     width: 85%;
-    height: 50vh;
+    height: auto;
     margin: 2rem auto;
     animation: drawFromLeft 0.7s ease-out forwards;
     transform-origin: left;
