--- a/src/index.css
+++ b/src/index.css
@@ -1144,6 +1144,14 @@ body {
 }
 
 @media (max-width: 1100px) {
+  .btns-showing {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20vh;
+    margin-right: 5vw;
+  }
   .flex-focus-1 {
     margin-top: 5vh;
     margin-left: 5vw;
@@ -1178,11 +1186,11 @@ body {
 
   .focusMode-tips {
     font-size: 0.8rem;
-    margin-top: 10vh;
+    margin-top: 30vh;
     /* margin-left: 2vw; */
     width: 100%;
     height: 40vh;
-    margin-bottom: 50vh;
+    margin-bottom: 5vh;
   }
 
   .focusMode-pomodoro-btns button {
