--- a/src/index.css
+++ b/src/index.css
@@ -1151,10 +1151,15 @@ body {
     align-items: center;
     margin-top: 20vh;
     margin-right: 5vw;
+    /* margin-bottom: 30vh; */
   }
   .flex-focus-1 {
     margin-top: 5vh;
     margin-left: 5vw;
+  }
+  .flex-focus-2 {
+    margin-top: 20vh;
+    margin-right: 6vw;
   }
   .flex-flexes {
     flex-direction: column;
@@ -1165,7 +1170,9 @@ body {
     justify-content: center;
     align-items: center;
     /* margin-left: vw; */
-    margin-right: 10vw;
+    margin-top: 10vh;
+    margin-right: 6vw;
+    /* margin-bottom: -20vh; */
   }
   .inputs-showing input {
     width: 65vw;
@@ -1186,15 +1193,15 @@ body {
 
   .focusMode-tips {
     font-size: 0.8rem;
-    margin-top: 30vh;
+    margin-top: 10vh;
     width: 100%;
     height: 40vh;
     margin-bottom: 5vh;
   }
 
   .focusMode-pomodoro-btns button {
-    width: 70vw;
-    height: 5vh;
+    width: 50vw;
+    height: 6vh;
     font-size: 0.8rem;
     text-align: center;
   }
@@ -1205,7 +1212,7 @@ body {
     justify-content: space-around;
     align-items: center;
     /* margin-top: 5vh; */
-    margin-bottom: 5vh;
+    margin-bottom: 15vh;
   }
   .progress-bar-section-focusModeActivated {
     display: flex;
